fix main header icon alignment

--- a/src/components/QueueSelector/styles.css
+++ b/src/components/QueueSelector/styles.css
@@ -1,5 +1,4 @@
 .wrapper {
-    width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
